;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.13 relative to sbcl-1.0.12:
  * SB-EXT:NATIVE-NAMESTRING takes a new keyword AS-FILE, forcing
    unparsing of directory pathnames as files. Analogously,
    SB-EXT:PARSE-NATIVE-NAMESTRING takes an AS-DIRECTORY, forcing a
    filename to parse into a directory pathname.
  * optimization: SUBSEQ is 30-80% faster for strings and vectors
    whose element-type or simplicity is not fully known at
    compile-time.
  * bug fix: some sequence functions elided bounds checking when
    SPEED > SAFETY.
  * bug fix: too liberal weakening of union-type checks when SPEED >
    SAFETY.
  * bug fix: more bogus fixnum declarations in ROOM implementation
    have been fixed.

changes in sbcl-1.0.12 relative to sbcl-1.0.11:
  * new feature: MAKE-HASH-TABLE now experimentally accepts a
    :SYNCHRONIZED argument, which makes the hash-table safe for
    concurrent accesses (but not iteration.) See also:
    SB-EXT:WITH-LOCKED-HASH-TABLE, and
    SB-EXT:HASH-TABLE-SYNCHRONIZED-P.
  * optimization: CONCATENATE on strings is an order of magnitue faster
    in code compiled with (> SPEED SPACE).
  * optimization: SUBSEQ is ~50% faster on lists.
  * bug fix: bug 417 fixed -- source location reporting is now more robust.
  * bug fix: SUBSEQ on a list will now correctly signal an error if if
    END is smaller then START.
  * bug fix: SB-PROFILE will no longer report extra consing for nested
    calls to profiled functions.
  * bug fix: ROOM implementation had bogus fixnum declarations which
    could cause type-errors when calling ROOM on large images.
  * bug fix: if file compilation is aborted, the partial fasl is now
    deleted, and COMPILE-FILE returns NIL as the primary value.
  * bug fix: number of thread safety issues relating to SBCL's internal
    hash-table usage have been fixed.
  * bug fix: SB-SYS:WITH-PINNED-OBJECTS could cause garbage values to
    be returned from its body when the values were being returned