@@ -1325,6 +1325,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "LAYOUT-SLOT-TABLE"
                #!+(or x86-64 x86) "%LEA"
                "LEXENV" "LEXENV-DESIGNATOR" "LINE-LENGTH"
+               "LIST-COPY-SEQ*"
                "LIST-SUBSEQ*"
                "ANSI-STREAM"
                "ANSI-STREAM-BIN" "ANSI-STREAM-BOUT" "ANSI-STREAM-CLOSE"
