@@ -4,9 +4,11 @@ changes in sbcl-1.0.13 relative to sbcl-1.0.12:
     unparsing of directory pathnames as files. Analogously,
     SB-EXT:PARSE-NATIVE-NAMESTRING takes an AS-DIRECTORY, forcing a
     filename to parse into a directory pathname.
-  * optimization: SUBSEQ is 30-80% faster for strings and vectors
-    whose element-type or simplicity is not fully known at
+  * optimization: SUBSEQ and COPY-SEQ are 30-80% faster for strings
+    and vectors whose element-type or simplicity is not fully known at
     compile-time.
+  * bug fix: COPY-SEQ on lists did not signal a type-error on improper
+    lists in safe code.
   * bug fix: some sequence functions elided bounds checking when
     SPEED > SAFETY.
   * bug fix: too liberal weakening of union-type checks when SPEED >
